--- a/order-test.yml
+++ b/order-test.yml
@@ -8,6 +8,9 @@ spring:
     url: jdbc:mysql://192.168.1.106:3306/SpringCloud_Sell?characterEncoding=utf-8&useSSL=false
   jpa:
     show-sql: true
+  rabbitmq:
+    host: 192.168.1.106
+    port: 5672
 eureka:
   client:
     service-url:
