--- a/user-test.yml
+++ b/user-test.yml
@@ -11,6 +11,9 @@ spring:
   rabbitmq:
     host: 192.168.1.106
     port: 5672
+  redis:
+    host: 192.168.1.106
+    port: 6379
 eureka:
   client:
     service-url:
